--- a/.gitignore
+++ b/.gitignore
@@ -951,3 +951,4 @@ packages/tools/website/utils/render.js
 packages/tools/website/utils/types.js
 # AUTO-GENERATED - EXCLUDED TYPESCRIPT BUILD
 
+/studyDocs/
